# xiaoxuan-core-vm

./: .gitignore  CONTRIBUTING  Cargo.toml  LICENSE.additional  README.md
.cargo/: config.toml
crates/allocator/: Cargo.toml
crates/allocator/src/: allocator.rs  dummy_allocator.rs  lib.rs  memory.rs  mimallocator.rs  resizeable_memory.rs  simple_allocator.rs  vec_allocator.rs
crates/ancsr/: Cargo.toml  README.md
crates/ancsr/src/: main.rs
crates/assembler/: Cargo.toml
crates/assembler/src/: assembler.rs  lib.rs
crates/binary/: Cargo.toml
crates/binary/src/: bytecode_reader.rs  bytecode_writer.rs  data_index_file.rs  func_index_file.rs  index_map.rs  index_sections.rs  lib.rs  module_image.rs  module_list_file.rs  utils.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/ccall/: Cargo.toml
crates/ccall/src/: lib.rs
crates/context/: Cargo.toml
crates/context/src/: bridge_function_table.rs  callback_delegate_function_table.rs  capability.rs  code_generator.rs  datas.rs  delegate_function_table.rs  environment.rs  external_function.rs  external_function_table.rs  heap.rs  index_instance.rs  indexed_memory.rs  indexed_memory_access.rs  jit_context.rs  jit_util.rs  lib.rs  loader.rs  memory.rs  memory_access.rs  module_common_instance.rs  module_index_instance.rs  module_instance.rs  module_linking_instance.rs  module_loader.rs  process_config.rs  process_context.rs  process_property.rs  process_resource.rs  program_property.rs  program_resource.rs  program_settings.rs  program_source.rs  resizeable_memory.rs  resource.rs  stack.rs  stack_unary.rs  thread_context.rs  thread_resources.rs  typed_memory.rs  typed_memory_access.rs
crates/extcall/: Cargo.toml
crates/extcall/resources/: lib-test-0.c
crates/extcall/src/: lib.rs  platform_linux.rs
crates/extcall_util/: Cargo.toml
crates/extcall_util/src/: platform_linux.rs
crates/extfunc_util/: Cargo.toml
crates/extfunc_util/src/: lib.rs  platform.rs
crates/image/: Cargo.toml
crates/image/src/: bytecode_reader.rs  bytecode_writer.rs  common_sections.rs  entry.rs  index_sections.rs  lib.rs  module_image.rs  tableaccess.rs  utils.rs
crates/isa/: Cargo.toml
crates/isa/src/: entry.rs  envcallcode.rs  lib.rs  opcode.rs  utils.rs
crates/jit/: Cargo.toml
crates/jit/src/: lib.rs
crates/memory/: Cargo.toml  README.md
crates/parser/: Cargo.toml
crates/process/: Cargo.toml
crates/processor/: Cargo.toml
crates/processor/src/: bridge_function.rs  bridge_handler.rs  bridge_process.rs  callback_delegate_handler.rs  code_generator.rs  delegate.rs  embed.rs  envcall.rs  envcall_handler.rs  envcall_num.rs  envcallcode.rs  extcall_handler.rs  external_function_call.rs  handler.rs  in_memory_process_resource.rs  in_memory_program_resource.rs  in_memory_program_source.rs  in_memory_resource.rs  instruction_handler.rs  interpreter.rs  jit_context.rs  jit_generator.rs  jit_util.rs  lib.rs  multithread.rs  multithread_handler.rs  multithread_process.rs  multithread_program.rs  process.rs  program.rs  program_embed.rs  syscall_handler.rs
crates/processor/src/envcall/: multithread.rs  runtime_info.rs  time.rs
crates/processor/src/envcall_handler/: env.rs  environment.rs  host.rs  multithread.rs  random.rs  regex.rs  runtime.rs  runtime_info.rs  time.rs  timer.rs
crates/processor/src/handler/: arithmetic.rs  bitwise.rs  calling.rs  comparison.rs  control_flow.rs  conversion.rs  data.rs  extcall.rs  funcall.rs  fundamental.rs  heap.rs  host.rs  local.rs  machine.rs  math.rs  memory.rs  syscall.rs
crates/processor/src/instruction_handler/: arithmetic.rs  bitwise.rs  calling.rs  comparison.rs  control_flow.rs  conversion.rs  data.rs  fundamental.rs  local.rs  machine.rs  math.rs  memory.rs
crates/processor/src/interpreter/: arithmetic.rs  bitwise.rs  comparison.rs  control_flow.rs  conversion.rs  data.rs  envcall.rs  extcall.rs  funcall.rs  fundamental.rs  heap.rs  host.rs  local.rs  math.rs  syscall.rs
crates/processor/src/interpreter/envcall/: initialization.rs  multithread.rs  runtime_info.rs  time.rs
crates/processor/tests/lib/: app.c  compile.sh  libtest0.c
crates/processor/tests/resources/libtest/: compile.sh  test.c
crates/program/: Cargo.toml
crates/program/src/: datas.rs  external_function.rs  heap.rs  indexed_memory.rs  jit_util.rs  lib.rs  memory.rs  module_index_instance.rs  module_instance.rs  program.rs  program_context.rs  program_module.rs  program_reference.rs  program_resource.rs  program_settings.rs  program_source.rs  resizeable_memory.rs  stack.rs  stack_unary.rs  thread_context.rs  type_memory.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bridge.rs  context.rs  datas.rs  ecall.rs  heap.rs  host_accessable_memory.rs  in_memory_program.rs  in_memory_program_source.rs  indexed_memory.rs  instruction.rs  interpreter.rs  jit_helper.rs  jit_util.rs  lib.rs  memory.rs  multithread_program.rs  opcode.rs  process.rs  processor.rs  program.rs  program_context.rs  resizeable_memory.rs  stack.rs  thread.rs  type_memory.rs  types.rs  utils.rs  vm.rs
crates/runtime/src/ecall/: bridge.rs  callback.rs  extcall.rs  function_address.rs  heap.rs  info.rs  multithread.rs  runtime_info.rs  syscall.rs
crates/runtime/src/interpreter/: arithmetic.rs  bitwise.rs  comparison.rs  control_flow.rs  conversion.rs  data.rs  envcall.rs  extcall.rs  funcall.rs  function_call.rs  fundamental.rs  heap.rs  host.rs  host_address.rs  immediate.rs  local.rs  machine.rs  math.rs  operand.rs  syscall.rs
crates/runtime/src/interpreter/envcall/: multithread.rs  runtime_info.rs  time.rs
crates/runtime/src/processor/: control_flow.rs  data.rs  host_address.rs  immediate.rs  local.rs  operand.rs
crates/runtime/tests/lib/: compile.sh  lib-test-0.c
crates/scall/: Cargo.toml
crates/stack/: Cargo.toml
crates/stack/src/: lib.rs  nostd_stack.rs  simple_stack.rs  stack.rs  std_stack.rs
crates/syscall/: Cargo.toml
crates/syscall_util/: Cargo.toml
crates/thread/: Cargo.toml
crates/types/: Cargo.toml
docs/: application-as-function.md  xiaoxuan-assembly.md
samples/: README.md
(+124 files in other folders)
