[package]
name = "ancsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm_types = { path = "../types" }
ancvm_binary = { path = "../binary" }
ancvm_program = { path = "../program" }
ancvm_runtime = { path = "../runtime" }
memmap2 = "0.9.0"