[package]
name = "ancvm_assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm_types = { path = "../types" }
ancvm_parser = { path = "../parser" }
ancvm_binary = { path = "../binary" }
ancvm_program = { path = "../program" }
ancvm_runtime = { path = "../runtime" }

[dev-dependencies]
pretty_assertions = "1.4.0"