[package]
name = "ancvm_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-codegen = "0.100.0"
cranelift-frontend = "0.100.0"
cranelift-module = "0.100.0"
cranelift-jit = "0.100.0"
cranelift-native = "0.100.0"
