[package]
name = "anc-context"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-isa = { path = "../../../xiaoxuan-core-isa" }
anc-image = { path = "../../../xiaoxuan-core-image" }
anc-memory = { path = "../memory" }
anc-stack = { path = "../stack" }
anc-allocator = { path = "../allocator" }

cranelift-codegen = "0.121.1"
cranelift-frontend = "0.121.1"
cranelift-module = "0.121.1"
cranelift-jit = "0.121.1"
cranelift-native = "0.121.1"
cranelift-object = "0.121.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
# https://doc.rust-lang.org/cargo/reference/features.html
default = ["bounds_check"]
bounds_check = []
