[package]
name = "anc-processor"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-isa = { path = "../../../xiaoxuan-core-isa" }
anc-image = { path = "../../../xiaoxuan-core-image" }
anc-context = { path = "../context" }
syscall-util = { git = "https://github.com/hemashushu/syscall-util.git", rev = "c21096fe6f31b63424eec1e5c39a3c1ffe63d67c" }
dyncall-util = { git = "https://github.com/hemashushu/dyncall-util.git", rev = "0a56f688d9b48dec59d19512aaef666c8d69884c" }
regex-anre = "1.0.0"
ason = "1.4.0"

cranelift-codegen = "0.115.0"
cranelift-frontend = "0.115.0"
cranelift-module = "0.115.0"
cranelift-jit = "0.115.0"
cranelift-native = "0.115.0"
cranelift-object = "0.115.0"

# libc = "0.2"
# rand = "0.8.5"

[features]
# https://doc.rust-lang.org/cargo/reference/features.html
default = []
static_bounds_check = [] # to check the compilation code