[package]
name = "ancvm_program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm_types = { path = "../types" }
ancvm_binary = { path = "../binary" }
ancvm_extfunc_util = { path = "../extfunc_util" }

cranelift-codegen = "0.100.0"
cranelift-frontend = "0.100.0"
cranelift-module = "0.100.0"
cranelift-jit = "0.100.0"
cranelift-native = "0.100.0"
