[package]
name = "ancvm_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm_types = { path = "../types" }
ancvm_binary = { path = "../binary" }
ancvm_syscall = { path = "../syscall" }
ancvm_extcall = { path = "../extcall" }
ancvm_thread = { path = "../thread" }

cranelift-codegen = "0.100.0"
cranelift-frontend = "0.100.0"
cranelift-module = "0.100.0"
cranelift-jit = "0.100.0"
cranelift-native = "0.100.0"
