[package]
name = "ancvm_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ancvm_types = { path = "../types" }
ancvm_binary = { path = "../binary" }
ancvm_syscall_util = { path = "../syscall_util" }
ancvm_extfunc_util = { path = "../extfunc_util" }
ancvm_program = { path = "../program" }
libc = "0.2"