[package]
name = "anc-stack"
version = "2.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anc-isa = { path = "../../../xiaoxuan-core-isa" }
anc-memory = { path = "../memory" }

[dev-dependencies]
pretty_assertions = "1.4.1"

[features]
# https://doc.rust-lang.org/cargo/reference/features.html
default = ["bounds_check"]
bounds_check = []
